--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+# Env
 env
 .env
+
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
